# BoxBuddyRS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  boxbuddy-dev-environment.ini  create-pot.sh  flatpak-build.sh  generated-sources.json  gschemas.compiled  io.github.dvlv.boxbuddyrs.desktop  io.github.dvlv.boxbuddyrs.external.json  io.github.dvlv.boxbuddyrs.gschema.xml  io.github.dvlv.boxbuddyrs.json  io.github.dvlv.boxbuddyrs.metainfo.xml  io.github.dvlv.boxbuddyrs.yml  meson.build  singlefile.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
data/: io.github.dvlv.boxbuddyrs.desktop.in  io.github.dvlv.boxbuddyrs.gschema.xml  meson.build
data/icons/: meson.build
docs/: CONTRIBUTING.md  ROADMAP.md  _config.yml  dev-docs.md  faqs.md  guide.md  index.md  install.sh  tips.md  translator-docs.md  uninstall.sh
docs/_includes/: head-custom.html
icons/: boxbuddy-icon-symbolic
po/: LINGUAS  POTFILES  README.md  boxbuddy.pot  it.po  it_IT.po  meson.build  pt_BR.po  ru_RU.po  uk_UA.po
po/cs/LC_MESSAGES/: boxbuddyrs.mo  cs.po
po/de_DE/LC_MESSAGES/: boxbuddyrs.mo  de_DE.mo  de_DE.po
po/el/LC_MESSAGES/: boxbuddyrs.mo  el.po
po/es/LC_MESSAGES/: boxbuddyrs.mo  es.po
po/es_ES/LC_MESSAGES/: boxbuddyrs.mo
po/fr_FR/: fr.po
po/fr_FR/LC_MESSAGES/: boxbuddyrs.mo  fr_FR.po
po/hi/LC_MESSAGES/: boxbuddyrs.mo  hi.mo  hi.po
po/it_IT/: it_IT.po
po/it_IT/LC_MESSAGES/: boxbuddyrs.mo  it_IT.mo  it_IT.po
po/nl_NL/LC_MESSAGES/: boxbuddyrs.mo  nl_NL.po
po/pl_PL/LC_MESSAGES/: boxbuddyrs.mo  pl_PL.po
po/pt_BR/LC_MESSAGES/: boxbuddyrs.mo  pt_BR.mo  pt_BR.po
po/ru_RU/LC_MESSAGES/: boxbuddyrs.mo  ru_RU.mo  ru_RU.po
po/tr/LC_MESSAGES/: boxbuddyrs.mo  tr.po
po/uk_UA/LC_MESSAGES/: boxbuddyrs.mo  uk_UA.mo  uk_UA.po
po/zh_CN/LC_MESSAGES/: boxbuddyrs.mo  zh_CN.po
po/zh_TW/LC_MESSAGES/: boxbuddyrs.mo  zh_TW.po
scripts/: compile-translations.sh  create-pot.sh  install.sh  update-translations.sh  version-check.sh
src/: config.rs  distrobox_handler.rs  main.rs  meson.build  utils.rs
