[package]
name = "boxbuddy-rs"
version = "2.2.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_4"] }
gettext-rs = { version = "0.7.1", features = ["gettext-system"] }
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
