[package]
name = "boxbuddy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.3.1"
gettext-rs = { version = "0.7.1", features = ["gettext-system"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
